flux/apps/ai/openclaw/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclaw
  namespace: default
spec:
  selector:
    matchLabels:
      app: openclaw
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: openclaw
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: openclaw
          image: ghcr.io/openclaw/openclaw:2026.9.8
          command:
            - node
            - /app/dist/index.js
            - gateway
            - run
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              # memory: 100Mi
          ports:
            - containerPort: 18789
          volumeMounts:
            - name: openclaw-data
              mountPath: /home/node/.openclaw
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: openclaw-data
          nfs:
            server: datasphere
            path: /Root/Volumes/openclaw
        - name: config
          configMap:
            name: openclaw-config
        - name: tmp
          emptyDir: {}
